--- a/login_page.html
+++ b/login_page.html
@@ -25,14 +25,11 @@
                 <h2>Login to BlockBlog</h2>
                 <form action="">
                     <div class="inputBx">
-                        <input type="text" required="required">
-                        <span>Login</span>
+                        <input type="text" required="required" placeholder="Login">
                         <i class="fas fa-user-circle"></i>
                     </div>
                     <div class="inputBx password">
-                        <input id="password-input" type="password" name="password" required="required">
-                        <span>Password</span>
-                        <a href="#" class="password-control" onclick=""></a>
+                        <input id="password-input" type="password" name="password" required="required" placeholder="Password">
                         <i class="fas fa-key"></i>
                     </div>
                     <label class="remember"><input type="checkbox">
