--- a/explore.html
+++ b/explore.html
@@ -106,12 +106,12 @@
                 <div class="useful-links">
                     <div class="footer-title">Useful Links</div>
                     <ul>
-                        <li>Main</li>
-                        <li>How in works</li>
-                        <li>Explore</li>
-                        <li>Sign In</li>
-                        <li>About Us</li>
-                        <li>Try</li>
+                        <li><a href="#">Main</a></li>
+                        <li><a href="howitworks.html">How in works</a></li>
+                        <li><a href="explore.html">Explore</a></li>
+                        <li><a href="login_page.html">Sign In</a></li>
+                        <li><a href="history.html">History</a></li>
+                        <li><a href="crypto.html">Crypto</a></li>
                     </ul>
                 </div>
                 <div class="help-sec">
@@ -127,16 +127,12 @@
             <div class="g-i-t f-item">
                 <div class="footer-title">Get in Touch</div>
                 <div class="social-buttons">
-                    <a href="#" class="social-button social-button--facebook" aria-label="Facebook"><i
-                            class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="social-button social-button--linkedin" aria-label="LinkedIn"><i
-                            class="fab fa-linkedin-in"></i></a>
-                    <a href="#" class="social-button social-button--snapchat" aria-label="Snapchat"><i
-                            class="fab fa-snapchat-ghost"></i></a>
-                    <a href="#" class="social-button social-button--github" aria-label="GitHub"><i
+                    <a href="https://t.me/@ardyc" class="social-button social-button--telegram" aria-label="Telegram"><i
+                            class="fab fa-telegram"></i></a>
+                    <a href="https://github.com/ArhostCode" class="social-button social-button--github" aria-label="GitHub"><i
                             class="fab fa-github"></i></a>
-                    <a href="#" class="social-button social-button--codepen" aria-label="CodePen"><i
-                            class="fab fa-codepen"></i></a>
+                    <a href="https://m.vk.com/ardycode" class="social-button social-button--vk" aria-label="VK"><i
+                            class="fab fa-vk"></i></a>
                 </div>
             </div>
         </div>
@@ -145,7 +141,8 @@
     <div class='cr-con'>Copyright &copy; 2023 | Made by Ardyc BlockBlog</div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js" crossorigin="anonymous"></script>
-<script src="js/explore.js" defer></script>
+<script src="js/data.js"></script>
+<script src="js/explore.js"></script>
 <script src="js/menu.js"></script>
 </body>
 </html>
